--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ database:
   host: 127.0.0.1
   port: 3306
   username: root
-  password: 2001928gsyhhh
+  password: wangjunyi
   dbname: smart_school
   charset: utf8mb4
   parseTime: true
